# csync

./: .gitignore  .roxmake.yml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.rs  build.sh  bytes.go  bytes_test.go  clipboard.go  command.go  config.go  config_test.go  daemon.go  go.mod  go.sum  install.sh  main.go  redis.go  self_update.go  start.sh  tauri.conf.json  test.env  typos.toml
.github/workflows/: cargo-test.yml  check.yml  csyncd-image.yml  release-binary.yml  release.yml
albert/: README.md  __init__.py
bruno/: bruno.json  healthz.bru  token.bru
bruno/blob/: delete_blob.bru  get_blob.bru  patch_blob_pin.bru  put_file_blob.bru  put_image_blob.bru  put_text_blob.bru
bruno/environments/: local.bru
bruno/metadata/: get_metadata.bru  get_metadatas.bru
bruno/user/: delete_user.bru  get_user.bru  get_users.bru  patch_user_admin.bru  patch_user_password.bru  put_user.bru
clipboard/: Cargo.toml
clipboard/examples/: clipboard_read.rs  clipboard_write_image.rs  clipboard_write_text.rs
clipboard/src/: clipboard.rs  lib.rs
config/: client.toml  daemon.toml  device0.toml  device1.toml  linux-wayland.toml  linux-x11.toml  macos.toml  send01.toml  send02.toml  server.toml  sync.toml  watch.toml
config/systemd/: README.md  csync-server.service  csync.service
control/: Cargo.toml
control/src/: cani.rs  cb.rs  config.rs  delete.rs  get.rs  main.rs  pin.rs  revision.rs  select.rs  state.rs  version.rs  watch.rs  whoami.rs
control/src/delete/: blob.rs  mod.rs  user.rs
control/src/get/: blob.rs  metadata.rs  mod.rs  user.rs
control/src/patch/: blob.rs  mod.rs  user.rs
control/src/put/: blob.rs  cb.rs  file.rs  image.rs  mod.rs  role.rs  text.rs  user.rs
control/src/read/: file.rs  image.rs  mod.rs  text.rs
csync/: Cargo.toml  Dockerfile  build.rs
csync/src/: config.rs  main.rs  output.rs  sync.rs
csyncd/: Cargo.toml  Dockerfile  README.md  csyncd.service  docker-cargo.toml  k8s.yml
csyncd/examples/: csynd_publish.rs  csynd_subscribe.rs
csyncd/src/: channel.rs  config.rs  main.rs  server.rs  worker.rs
csyncd/src/tests/: channel.rs
daemon/: Cargo.toml  build.rs  tauri.conf.json
daemon/src/: clipboard.rs  config.rs  daemonize.rs  main.rs  now.rs  remote.rs  server.rs
daemon/src/sync/: config.rs  factory.rs  image.rs  mod.rs  send.rs  text.rs
daemon/src/tray/: api.rs  config.rs  daemon.rs  factory.rs  handler.rs  mod.rs  render.rs  state.rs  ui.rs
daemon/web/: settings.html
deploy/: csync-server.service  csyncd.service
deploy/chart/: .gitignore  Chart.yaml  generate_cert.sh  generate_token_pki.sh  values.yaml
deploy/docker-compose/: docker-compose.yml
deploy/systemd/: csync-daemon.service  csync-server.service
hack/: fzf-select.sh  fzf.sh  rofi.sh  test.env  test.sh
misc/: .gitignore  Cargo.toml
misc/src/: code.rs  config.rs  dirs.rs  display.rs  filelock.rs  header.rs  humanize.rs  imghdr.rs  lib.rs  logs.rs  rsa.rs  table.rs  time.rs
misc/src/api/: blob.rs  metadata.rs  mod.rs  user.rs
misc/src/client/: config.rs  daemon.rs  events.rs  factory.rs  mod.rs  restful.rs  share.rs  token.rs
misc/src/clipboard/: macos.rs  mod.rs  wayland.rs  x11.rs
misc/src/daemon/: client.rs  conn.rs  frame.rs  mod.rs
misc/src/filelock/: mod.rs  unix.rs  windows.rs
misc/src/logs/: config.rs  mod.rs
misc/src/secret/: aes.rs  factory.rs  mod.rs
misc/src/stream/: cipher.rs  frame.rs  mod.rs
misc/src/types/: cmd.rs  file.rs  image.rs  mod.rs  request.rs  response.rs  revision.rs  text.rs  token.rs  user.rs
proto/: Cargo.toml  README.md
proto/examples/: echo_client.rs  echo_server.rs
proto/src/: auth.rs  client.rs  conn.rs  frame.rs  lib.rs
proto/tests/: client.rs  conn.rs
server/: .gitignore  Cargo.toml  build.rs
server/src/: config.rs  context.rs  factory.rs  main.rs  recycle.rs  request.rs  response.rs  restful.rs
server/src/auth/: basic.rs  bearer_token.rs  jwt.rs  mod.rs  rsa.rs
server/src/auth/testdata/: private_key.pem  public_key.pem
server/src/authn/: admin.rs  anonymous.rs  bearer_token.rs  chain.rs  config.rs  factory.rs  mod.rs  union.rs
server/src/authn/token/: config.rs  factory.rs  jwt.rs  mod.rs  simple.rs
server/src/authn/token/testdata/: generate_key.sh  private_key.pem  public_key.pem
server/src/authz/: admin.rs  anonymous.rs  chain.rs  config.rs  factory.rs  mod.rs  rule.rs
server/src/db/: config.rs  factory.rs  mod.rs  sql.rs  types.rs
server/src/db/cache/: config.rs  factory.rs  memory.rs  mod.rs  tests.rs
server/src/db/sqlite/: blob.rs  config.rs  factory.rs  file.rs  image.rs  mod.rs  text.rs  user.rs
server/src/db/tests/: blob.rs  file.rs  image.rs  mod.rs  text.rs  user.rs
server/src/events/: mod.rs  notify.rs  server.rs
server/src/handlers/: api.rs  blob.rs  healthz.rs  login.rs  metadata.rs  mod.rs  token.rs  user.rs
server/src/handlers/resources/: dispatch.rs  files.rs  images.rs  mod.rs  roles.rs  texts.rs  union.rs  users.rs
server/src/recycle/: config.rs  factory.rs  mod.rs
server/src/revision/: config.rs  factory.rs  memory.rs  mod.rs
src/: client.rs  clipboard.rs  config.rs  dirs.rs  display.rs  filelock.rs  hash.rs  humanize.rs  ignore.rs  imghdr.rs  lib.rs  logs.rs  main.rs  net.rs  rsa.rs  server.rs  sync.rs  table.rs  time.rs  types.rs  utils.rs
src/client/: config.rs  factory.rs  mod.rs  token.rs
src/clipboard/: exec.rs  macos.rs  mod.rs  wayland.rs  x11.rs
src/cmd/: cani.rs  cb.rs  config.rs  daemon.rs  delete.rs  get.rs  mod.rs  notify.rs  select.rs  send.rs  serve.rs  server.rs  start.rs  tray.rs  version.rs  watch.rs  whoami.rs
src/config/: defaults.rs  mod.rs
src/daemon/: client.rs  config.rs  factory.rs  mod.rs  server.rs
src/net/: auth.rs  client.rs  conn.rs  frame.rs  mod.rs  server.rs
src/secret/: aes.rs  config.rs  factory.rs  mod.rs
src/server/: config.rs  factory.rs  mod.rs  response.rs  restful.rs  state.rs
src/sync/: client.rs  conn.rs  frame.rs  mod.rs  notify.rs  read.rs  (+1 more)
testdata/: private_key.pem  public_key.pem
tests/: auth.rs  frame.rs  server.rs
utils/: Cargo.toml
(+118 files in other folders)
