[package]
name = "csync"
version = "0.5.0"
edition = "2021"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/csync"
description = "Share your clipboard between different devices"

[dependencies]
actix-web = { version = "4.9", features = ["openssl"] }
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
fern = { version = "0.7", features = ["colored"] }
file-lock = "2.1"
humantime = "2.1"
jsonwebtoken = "9.3"
libc = "0.2"
log = "0.4"
openssl = "0.10"
pad = "0.1"
pbkdf2 = "0.12"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
sd-notify = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"

[dev-dependencies]
once_cell = "1.20"

[build-dependencies]
simple-error = "0.3"
vergen = { version = "9.0", features = ["build", "rustc", "cargo", "si"] }

[profile.release]
lto = true
strip = true
incremental = false
