[package]
name = "csynctl"
edition = "2021"
description = "Csync control"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
csync_misc = { path = "../misc" }
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }

[build-dependencies]
csync_build = { path = "../build" }

[profile.release]
lto = true
strip = true
incremental = false
