[package]
name = "csync"
edition = "2021"
description = "csync command line tool"

[dependencies]
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.2" }

[build-dependencies]
csync_build = { path = "../build" }
tauri-build = { version = "2.0", features = [] }
