[package]
name = "csyncd"
edition = "2021"
description = "Csync daemon"
authors = ["fioncat"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csync_misc = { path = "../misc" }
log = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-opener = "2.2"
tauri-plugin-shell = "2.2"
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
once_cell = "1.20"

[build-dependencies]
csync_build = { path = "../build" }
tauri-build = { version = "2.0", features = [] }
