[package]
name = "csyncd"
edition = "2021"
description = "Csync daemon"
authors = ["fioncat"]

[dependencies]
anyhow = "^1"
async-trait = "^0"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
console = "^0"
csync_misc = { path = "../misc" }
daemonize = "^0"
log = "^0"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "^0"
sysinfo = "^0"
tauri = { version = "^2", features = ["tray-icon", "image-ico"] }
tauri-plugin-dialog = "^2"
tauri-plugin-opener = "^2"
tauri-plugin-shell = "^2"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
once_cell = "^1"

[build-dependencies]
csync_build = { path = "../build" }
tauri-build = { version = "^2", features = [] }
