[package]
name = "csyncd"
edition = "2021"
description = "Csync daemon"
authors = ["fioncat"]

[dependencies]
anyhow = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
csync_misc = { path = "../misc" }
log = "^0"
serde = {version = "^1", features = ["derive"] }
tauri = { version = "^2", features = ["tray-icon", "image-ico"] }
tauri-plugin-dialog = "^2"
tauri-plugin-opener = "^2"
serde_json = "^1"
tauri-plugin-shell = "^2"
tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
console = "^0"
daemonize = "^0"
sysinfo = "^0"

[build-dependencies]
csync_build = { path = "../build" }
tauri-build = { version = "^2", features = [] }
