[package]
name = "csync_misc"
edition = "2021"

[dependencies]
aes-gcm = "^0"
anyhow = "^1"
base64 = "^0"
bytes = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
console = "^0"
file-lock = "^2"
humantime = "^2"
libc = "^0"
log = "^0"
log4rs = "^1"
openssl = "^0"
pad = "^0"
pbkdf2 = "^0"
rand = "^0"
reqwest = { version = "^0", features = ["json"] }
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "^0"
shellexpand = "^3"
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
toml = "^0"
unicode-width = "^0"
