[package]
name = "csync_misc"
edition = "2021"

[dependencies]
aes-gcm = "^0"
anyhow = "^1"
base64 = "^0"
bytes = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
console = "^0"
log = "^0"
log4rs = "^1"
once_cell = "^1"
pad = "^0"
pbkdf2 = "^0"
regex = "^1"
reqwest = "^0"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "^0"
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
toml = "^0"

[target.'cfg(unix)'.dependencies]
file-lock = "^2"
libc = "^0"
