[package]
name = "csync_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.79"
bincode = "1.3.3"
bytes = "1.5.0"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rpassword = "7.3.1"
serde = { version = "1.0.195", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features=["full"] }
use = "0.0.1-pre.0"

[dev-dependencies]
scanf = "1.2.1"
