[package]
name = "csync-server"
edition = "2021"
description = "csync server"

[dependencies]
actix-web = { version = "4.9", features = ["openssl"] }
anyhow = "1.0"
chrono = "0.4"
csync_misc = { path = "../misc" }
jsonwebtoken = "9.3"
log = "0.4"
openssl = "0.10"
rusqlite = { version = "0.33", features = ["bundled"] }
sd-notify = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
once_cell = "1.20"

[build-dependencies]
csync_build = { path = "../build" }
