[package]
name = "csync-server"
edition = "2021"
description = "Csync server"

[dependencies]
actix-web = { version = "^4", features = ["openssl"] }
anyhow = "^1"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
csync_misc = { path = "../misc" }
jsonwebtoken = "^9"
log = "^0"
openssl = "^0"
rusqlite = { version = "^0", features = ["bundled"] }
sd-notify = "^0"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "^0"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
once_cell = "^1"

[build-dependencies]
csync_build = { path = "../build" }
